--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,7 +2,7 @@ name: Docker
 
 on:
   push:
-    branches: ["main"]
+    branches: ["master"]
   workflow_dispatch: # Ermöglicht manuelle Ausführung
 
 jobs:
