--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ RTSP_URL=rtsp://username:password@ip:port/stream
 # Discord Konfiguration
 DISCORD_CHANNEL_ID=your_channel_id
 DISCORD_BOT_TOKEN=your_bot_token
+DISCORD_DAILY_CHANNEL_ID=your_daily_channel_id
 
 # Screenshot Konfiguration
 SCREENSHOT_INTERVAL=300  # 5 Minuten in Sekunden
