--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ RTSP_URL=rtsp://username:password@ip:port/stream
 DISCORD_CHANNEL_ID=your_channel_id
 DISCORD_BOT_TOKEN=your_bot_token
 DISCORD_DAILY_CHANNEL_ID=your_daily_channel_id
+DISCORD_GUILD_IDS=123747481273138 # Comma-separated
 
 # Screenshot Konfiguration
 SCREENSHOT_INTERVAL=300  # 5 Minuten in Sekunden
